(SIMP-7458) Add AH and ESP Protocol Support
This change adds the ability to add rich-rules for AH and ESP protocol
support. This is required for ability to utilize the libreswan module
for IPSec tunnels.

SIMP-7458 #comment firewalld support for necessary protocols

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,5 @@
+* Thu Jul 30 2020 Adam Yohrling <adam.yohrling@onyxpoint.com> - 0.1.1
+- Add support for ESP and AH protocol rules
+
 * Thu May 21 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.0
 - Initial module release
