(SIMP-8839) Remove EL6 from pupmod-simp-simp_firewalld
This patch removes EL6 as a supported OS in `metadata.json`, Hiera YAML
files and from the beaker acceptance tests and nodesets.

SIMP-8894 #close
[SIMP-8839] #comment Removed EL6 from pupmod-simp-simp_firewalld
[SIMP-8489] #comment Updated pupmod-simp-simp_firewalld GLCI pipeline to Puppet 6.18
[SIMP-8923] #comment Renamed 'sanity' to 'releng' in pupmod-simp-simp_firewalld

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.1.3
+- Removed EL6 support
+
 * Tue Nov 17 2020 Trevor Vaughan <tvaughan@onyxoint.com> - 0.1.2
 - Ensure that the firewall backend is not set on systems without multiple
   backends
