(SIMP-9780) Puppetsync: Remove Puppet 5, Support 7
This patch:

  * Removes Puppet 5 from `metadata.json` and the GHA & GLCI matrix
  * Ensures support for Puppet 7 in `metadata.json`
    * Ensures Pup 7 for module deps stdlib and concat (if present)
  * Updates GLCI and GHA matrix to model Puppet PE using Puppet 6.22.1
  * Bumps Gemfile's simp-rake-helpers and simp-beaker-helpers min vers
  * Removes `.pmtignore` and adds `.pdkignore`
  * Ensures `.git` is added to fixture URLs

The patch enforces a standardized asset baseline using simp/puppetsync,
and may apply other updates to ensure conformity.

[SIMP-9845] #close
[SIMP-9780] #comment Drop Puppet 5 in pupmod-simp-simp_firewalld
[SIMP-9670] #comment update Puppet 6.22.1 in pupmod-simp-simp_firewalld
[SIMP-9606] #comment Switch pupmod-simp-simp_firewalld from .pmtignore to .pdkignore
[SIMP-9781] #comment bump Gemfile versions in pupmod-simp-simp_firewalld
[SIMP-9826] #comment Ensured fixture repo urls for pupmod-simp-simp_firewalld

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.0
+- Removed support for Puppet 5
+- Ensured support for Puppet 7 in requirements and stdlib
+
 * Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.1.3
 - Removed EL6 support
 
