--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 * Sun Feb 13 2022 Trevor Vaughan <trevor@sicura.us> - 0.3.1
 - Support Amazon Linux 2
+- Work around upstream bug:
+    - `puppet-firewalld` needs to have an autorequire on
+      `firewalld_custom_service` if one is declared.
 
 * Tue Dec 21 2021 Kendall Moore <kendall@sicura.us> - 0.3.0
 - Changed default backend to nftables for RHEL 8
