--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.4.0
+- Add RockyLinux 8 support
+
 * Thu Jan 19 2023 Michael Riddle <mike@sicura.us> - 0.3.2
 - Support RHEL 9
 - Added a default hieradata file for more flexibility
