--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Wed Aug 23 2023 Steven Pritchard <steve@sicura.us> - 0.5.0
+- Add AlmaLinux 8 support
+
 * Mon Aug 14 2023 Mike Riddle <mike@sicura.us> - 0.4.2
 - Moved the common.yaml to the top level data directory so it will actually be read
 
