--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+* Mon Oct 02 2023 Steven Pritchard <steve@sicura.us> - 0.6.0
+- Use `firewalld_custom_service` instead of `firewalld::custom_service` for
+  compatibility with `puppet-firewalld` >= 5.0.0
+- Support stdlib 9
+- Support Puppet 8
+- Drop support for Puppet 6
+
 * Wed Aug 23 2023 Steven Pritchard <steve@sicura.us> - 0.5.0
 - Add AlmaLinux 8 support
 
