--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+* Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 0.7.0
+- [puppetsync] Updates for Puppet 8
+  - These updates may include the following:
+    - Update Gemfile
+    - Add support for Puppet 8
+    - Drop support for Puppet 6
+    - Update module dependencies
+
 * Mon Oct 02 2023 Steven Pritchard <steve@sicura.us> - 0.6.0
 - Use `firewalld_custom_service` instead of `firewalld::custom_service` for
   compatibility with `puppet-firewalld` >= 5.0.0
