(#47) Made purge parameters for the 99_simp zone toggle-able (#48)
* (#47) Made purge parameters for the 99_simp zone toggle-able

Fixes #47

* Updated the metadata and CHANGELOG

* Fixed metadata.json to the correct updated version

* updated REFERENCE.md

* Fixed CHANGELOG entry

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Thu Jan 18 2024 Mike Riddle <mike@sicura.us> - 0.10.0
+- Made the 99_simp zone purge parameters toggle-able
+
 * Thu Nov 30 2023 Sean Peterson <________@gmail.com> - 0.9.0
 - Add $simp_zone_masquerade parameter
 
