--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+* Mon Aug 04 2025 Mike Riddle <mike@sicura.us> - 1.0.0
+- Removed el7 support
+- Added el10 support
+
 * Mon Apr 29 2024 Steven Pritchard <steve@sicura.us> - 0.10.1
 - Prevent duplicate declaration in `firewalld_ipset` (#49)
 
